tests/sumo/extended/calibrator/errors/vClass_mismatch_ignore/tripinfos.sumo.meso
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Wed Nov 27 09:35:16 2019 by Eclipse SUMO Version v1_3_1+1129-34e3c4d
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
SPDX-License-Identifier: EPL-2.0
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <additional-files value="input_additional.add.xml"/>
    </input>

    <output>
        <write-license value="true"/>
        <tripinfo-output value="tripinfos.xml"/>
    </output>

    <time>
        <end value="100"/>
    </time>

    <processing>
        <ignore-route-errors value="true"/>
        <default.speeddev value="0"/>
        <pedestrian.model value="nonInteracting"/>
    </processing>

    <report>
        <xml-validation value="never"/>
        <no-step-log value="true"/>
    </report>

    <mesoscopic>
        <mesosim value="true"/>
    </mesoscopic>

</configuration>
-->

<tripinfos xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/tripinfo_file.xsd">
    <tripinfo id="cali.0.0" depart="8.00" departLane="" departPos="0.00" departSpeed="13.89" departDelay="0.00" arrival="23.00" arrivalLane="" arrivalPos="100.00" arrivalSpeed="13.89" duration="15.00" routeLength="200.00" waitingTime="0.00" waitingCount="0" stopTime="0.00" timeLoss="0.00" rerouteNo="0" devices="tripinfo_cali.0.0" vType="DEFAULT_VEHTYPE" speedFactor="1.00" vaporized=""/>
    <tripinfo id="cali.0.1" depart="8.00" departLane="" departPos="0.00" departSpeed="11.28" departDelay="0.00" arrival="25.00" arrivalLane="" arrivalPos="100.00" arrivalSpeed="13.89" duration="17.00" routeLength="200.00" waitingTime="0.00" waitingCount="0" stopTime="0.00" timeLoss="1.67" rerouteNo="0" devices="tripinfo_cali.0.1" vType="DEFAULT_VEHTYPE" speedFactor="1.00" vaporized=""/>
    <tripinfo id="cali.0.2" depart="13.00" departLane="" departPos="0.00" departSpeed="13.89" departDelay="0.00" arrival="28.00" arrivalLane="" arrivalPos="100.00" arrivalSpeed="13.89" duration="15.00" routeLength="200.00" waitingTime="0.00" waitingCount="0" stopTime="0.00" timeLoss="0.00" rerouteNo="0" devices="tripinfo_cali.0.2" vType="DEFAULT_VEHTYPE" speedFactor="1.00" vaporized=""/>
    <tripinfo id="cali.0.3" depart="18.00" departLane="" departPos="0.00" departSpeed="13.89" departDelay="0.00" arrival="33.00" arrivalLane="" arrivalPos="100.00" arrivalSpeed="13.89" duration="15.00" routeLength="200.00" waitingTime="0.00" waitingCount="0" stopTime="0.00" timeLoss="0.00" rerouteNo="0" devices="tripinfo_cali.0.3" vType="DEFAULT_VEHTYPE" speedFactor="1.00" vaporized=""/>
</tripinfos>
